--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,7 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <div class="container-fluid bg-dark text-light">
+    <div class="container bg-white text-dark">
     {% block content %}
     {% endblock %}
     </div>
