--- a/templates/blog/post-detail.html
+++ b/templates/blog/post-detail.html
@@ -12,6 +12,9 @@
         {{ post.content|safe }}
     </div>
 {% endrow %}
+
+{% include "blog/post-comments.html" %}
+
 {% row %}
     <div class="col">
         {% recent_posts post %}
